--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-day-picker": "^9.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
