--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.58.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.3.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
