--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "argon2": "^0.41.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookies-next": "^4.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "libphonenumber-js": "^1.11.5",
