--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
     "react-day-picker": "^9.1.3",
     "react-dom": "^18.3.1",
@@ -39,7 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "prettier": "^3.3.3",
+    "prettier": "^3.0.0-alpha.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.2"
   }
