--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
 		"js-cookie": "^3.0.5",
 		"lodash.debounce": "^4.0.8",
 		"lucide-react": "^0.441.0",
-		"next": "^14.2.13",
+		"next": "^15.0.0-rc.1",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"react": "^18.3.1",
 		"react-day-picker": "^9.1.3",
@@ -30,6 +30,7 @@
 		"react-hook-form": "^7.53.0",
 		"react-intersection-observer": "^9.13.1",
 		"react-query": "^3.39.3",
+		"react-toastify": "^10.0.6",
 		"sonner": "^1.5.0"
 	},
 	"devDependencies": {
