--- a/server/package.json
+++ b/server/package.json
@@ -40,11 +40,14 @@
     "dotenv": "^16.4.5",
     "libphonenumber-js": "^1.11.5",
     "nestjs-form-data": "^1.9.7",
+    "next": "^15.0.0-rc.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "react": "^19.0.0-rc-cae764ce-20241025",
+    "react-dom": "^19.0.0-rc-cae764ce-20241025",
     "reflect-metadata": "^0.2.0",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
